# dp_elimination

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
app/: args_parser.cpp  args_parser.hpp  main.cpp
data/: config.toml  example.cnf  result.cnf
experiments/: .gitignore  default_config.toml  environment.yml  equivalence.py  experiments.py  grid_search.py  input_formulas.txt  plots.py  process_grid_search.ipynb  run.py  run_experiments.py  summary.py  summary_data.csv  summary_data_manual.csv  summary_plots.py  summary_table.py  summary_table_draft.ipynb  tables.py
experiments/inputs/: bf0432-007.toml
experiments/inputs/dataset/: .gitignore
experiments/inputs/dataset/Network/: sat-grid-pbl-0010.dc.min.cnf  sat-grid-pbl-0015.dc.min.cnf
experiments/inputs/dataset/Planning/: 3blocks.dc.min.cnf  anomaly.dc.min.cnf  medium.dc.min.cnf  tire-1.dc.min.cnf  tire-1.dc.min.toml
experiments/inputs/dataset/qif/: mixdup.cnf  mixdup.dc.min.cnf  mixdup.dc.min.toml
experiments/inputs/dataset/random/: wff.3.75.315.dc.min.cnf
experiments/inputs/dpelim_data/: .gitignore
experiments/inputs/dpelim_data/Network/: sat-grid-pbl-0010.dc.cnf  sat-grid-pbl-0010.dc.toml  sat-grid-pbl-0015.dc.cnf  sat-grid-pbl-0015.dc.toml
experiments/inputs/dpelim_data/Planning/: 3blocks.dc.cnf  3blocks.dc.toml  (+7 more)
experiments/inputs/instancesCompilation/: .gitignore
experiments/setups/: all_minimizations.toml  ascending_heuristic.toml  clear_literal.toml  default.toml  descending_heuristic.toml  grid_search.toml  lace_1_thread.toml  lace_7-threads.toml  lace_7_threads.toml  minimal_bloat.toml  minimal_bloat_higher_limit.toml  no_absorbed_removal.toml  only_complete_minimization.toml
lib/: logging.cpp  logging.hpp  utils.hpp
lib/algorithms/: dp_elimination.hpp  heuristics.h  heuristics.hpp  unit_propagation.cpp  unit_propagation.hpp
lib/data_structures/: lru_cache.hpp  sylvan_zdd_cnf.cpp  sylvan_zdd_cnf.hpp  vector_cnf.cpp  vector_cnf.hpp  watched_literals.cpp  watched_literals.hpp
lib/io/: cnf_reader.cpp  cnf_reader.hpp  cnf_writer.cpp  cnf_writer.hpp
lib/metrics/: dp_metrics.hpp  metrics_collector.hpp
src/: args_parser.cpp  args_parser.hpp  logging.cpp  logging.hpp  main.cpp  utils.hpp
src/algorithms/: dp_elimination.hpp  unit_propagation.hpp
src/data_structures/: lru_cache.hpp  sylvan_bdd_set.h  sylvan_zdd_cnf.cpp  sylvan_zdd_cnf.hpp  watched_literals.cpp  watched_literals.hpp
src/io/: cnf_reader.cpp  cnf_reader.hpp  cnf_writer.cpp  cnf_writer.hpp
tests/: main.cpp  test_cnf_reader.cpp  test_cnf_writer.cpp  test_dp_elimination.cpp  test_example.cpp  test_heuristics.cpp  test_lru_cache.cpp  test_sylvan_zdd_cnf.cpp  test_unit_propagation.cpp  test_watched_literals.cpp
(+246 files in other folders)
